// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`residentsScroller Should match the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResidentsScroller
    content1={
      Array [
        "Anikan",
        "R2-D2",
      ]
    }
    content2=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <i
          className="fas fa-caret-left resident-arrow"
          onClick={[Function]}
        />,
        <i
          className="fas fa-caret-right resident-arrow"
          onClick={[Function]}
        />,
        Array [
          <h4
            className="resident "
          >
            Anikan
          </h4>,
          <h4
            className="resident none"
          >
            R2-D2
          </h4>,
        ],
      ],
      "className": "residents-scroller",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "fas fa-caret-left resident-arrow",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "i",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "fas fa-caret-right resident-arrow",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "i",
      },
      Object {
        "instance": null,
        "key": "uid1",
        "nodeType": "host",
        "props": Object {
          "children": "Anikan",
          "className": "resident ",
        },
        "ref": null,
        "rendered": "Anikan",
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": "uid2",
        "nodeType": "host",
        "props": Object {
          "children": "R2-D2",
          "className": "resident none",
        },
        "ref": null,
        "rendered": "R2-D2",
        "type": "h4",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <i
            className="fas fa-caret-left resident-arrow"
            onClick={[Function]}
          />,
          <i
            className="fas fa-caret-right resident-arrow"
            onClick={[Function]}
          />,
          Array [
            <h4
              className="resident "
            >
              Anikan
            </h4>,
            <h4
              className="resident none"
            >
              R2-D2
            </h4>,
          ],
        ],
        "className": "residents-scroller",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "fas fa-caret-left resident-arrow",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "fas fa-caret-right resident-arrow",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
        Object {
          "instance": null,
          "key": "uid1",
          "nodeType": "host",
          "props": Object {
            "children": "Anikan",
            "className": "resident ",
          },
          "ref": null,
          "rendered": "Anikan",
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": "uid2",
          "nodeType": "host",
          "props": Object {
            "children": "R2-D2",
            "className": "resident none",
          },
          "ref": null,
          "rendered": "R2-D2",
          "type": "h4",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`residentsScroller Should match the snapshot if no content 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResidentsScroller
    content1={
      Array [
        "Anikan",
        "R2-D2",
      ]
    }
    content2=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <i
          className="fas fa-caret-left resident-arrow"
          onClick={[Function]}
        />,
        <i
          className="fas fa-caret-right resident-arrow"
          onClick={[Function]}
        />,
        Array [],
      ],
      "className": "residents-scroller",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "fas fa-caret-left resident-arrow",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "i",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "fas fa-caret-right resident-arrow",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "i",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <i
            className="fas fa-caret-left resident-arrow"
            onClick={[Function]}
          />,
          <i
            className="fas fa-caret-right resident-arrow"
            onClick={[Function]}
          />,
          Array [],
        ],
        "className": "residents-scroller",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "fas fa-caret-left resident-arrow",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "fas fa-caret-right resident-arrow",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
